fix tensorboard address in example

--- a/IrisKerasCallback.ipynb
+++ b/IrisKerasCallback.ipynb
@@ -305,7 +305,7 @@
     "From a commanline shell, we use ```tensorboard --log-dir logs``` where ```logs``` is the directory containing all the log-files we\n",
     "have specified when setting up the TensorBoard callback.\n",
     "\n",
-    "We can then open a webbrowser and point it to the location where TensorBoard runs, e.g. ```TensorBoard 2.1.1 at http://localhost:6006/```\n",
+    "We can then open a webbrowser and point it to the location where TensorBoard runs, e.g. ``` http://localhost:6006/```\n",
     "\n",
     "An example is shown below:\n",
     "![TensorBoard Example](TensorBoard_Example_Iris.png)"
