--- a/IrisNNGradientTapeDataset.ipynb
+++ b/IrisNNGradientTapeDataset.ipynb
@@ -261,7 +261,9 @@
     "```\n",
     "\n",
     "In addition we want to log the values of the loss function and the current accuracy (on the training sample) at each step of the trainig for later analysis and the rest of the loop below saves this information. Since we train the network in batches of 32 samples in each training iteration, we average over the values in each batch to smooth out some statistical fluctuations.\n",
-    "(note: ideally we would also include the loss and accuracy of an independent test sample during training as well)"
+    "(note: ideally we would also include the loss and accuracy of an independent test sample during training as well)\n",
+    "\n",
+    "We then need to pass the computed gradient to the optimizer so that the optimizer can change the variable values accordingly."
    ]
   },
   {
