fix some typos, etc

--- a/IrisKeras.ipynb
+++ b/IrisKeras.ipynb
@@ -650,7 +650,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and the first node has the highest value. Hence we use '0' s the predicted label."
+    "and the first node has the highest value. Hence we use '0' as the predicted label."
    ]
   },
   {
@@ -756,7 +756,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
