--- a/IrisKerasCallback.ipynb
+++ b/IrisKerasCallback.ipynb
@@ -28,14 +28,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.1.0\n"
+      "Populating the interactive namespace from numpy and matplotlib\n",
+      "2.2.0\n"
      ]
     }
    ],
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,22 +70,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_3 (Dense)              (None, 10)                50        \n",
+      "dense (Dense)                (None, 10)                50        \n",
       "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 10)                110       \n",
+      "dense_1 (Dense)              (None, 10)                110       \n",
       "_________________________________________________________________\n",
-      "dense_5 (Dense)              (None, 3)                 33        \n",
+      "dense_2 (Dense)              (None, 3)                 33        \n",
       "=================================================================\n",
       "Total params: 193\n",
       "Trainable params: 193\n",
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,114 +129,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 150 samples\n",
       "Epoch 1/50\n",
-      "150/150 [==============================] - 1s 3ms/sample - loss: 1.1109 - sparse_categorical_accuracy: 0.3800\n",
+      "5/5 [==============================] - 0s 27ms/step - loss: 0.9999 - sparse_categorical_accuracy: 0.3333\n",
       "Epoch 2/50\n",
-      "150/150 [==============================] - 0s 302us/sample - loss: 0.9754 - sparse_categorical_accuracy: 0.3533\n",
+      "5/5 [==============================] - 0s 10ms/step - loss: 0.8366 - sparse_categorical_accuracy: 0.6533\n",
       "Epoch 3/50\n",
-      "150/150 [==============================] - 0s 295us/sample - loss: 0.8148 - sparse_categorical_accuracy: 0.7200\n",
+      "5/5 [==============================] - 0s 10ms/step - loss: 0.6939 - sparse_categorical_accuracy: 0.8333\n",
       "Epoch 4/50\n",
-      "150/150 [==============================] - 0s 288us/sample - loss: 0.7024 - sparse_categorical_accuracy: 0.6733\n",
+      "5/5 [==============================] - 0s 11ms/step - loss: 0.5744 - sparse_categorical_accuracy: 0.8333\n",
       "Epoch 5/50\n",
-      "150/150 [==============================] - 0s 328us/sample - loss: 0.6043 - sparse_categorical_accuracy: 0.7733\n",
+      "5/5 [==============================] - 0s 10ms/step - loss: 0.4812 - sparse_categorical_accuracy: 0.8800\n",
       "Epoch 6/50\n",
-      "150/150 [==============================] - 0s 303us/sample - loss: 0.5217 - sparse_categorical_accuracy: 0.8867\n",
+      "5/5 [==============================] - 0s 10ms/step - loss: 0.4162 - sparse_categorical_accuracy: 0.8867\n",
       "Epoch 7/50\n",
-      "150/150 [==============================] - 0s 308us/sample - loss: 0.4542 - sparse_categorical_accuracy: 0.9067\n",
+      "5/5 [==============================] - 0s 10ms/step - loss: 0.3845 - sparse_categorical_accuracy: 0.9000\n",
       "Epoch 8/50\n",
-      "150/150 [==============================] - 0s 308us/sample - loss: 0.3970 - sparse_categorical_accuracy: 0.9533\n",
+      "5/5 [==============================] - 0s 10ms/step - loss: 0.3505 - sparse_categorical_accuracy: 0.9133\n",
       "Epoch 9/50\n",
-      "150/150 [==============================] - 0s 524us/sample - loss: 0.3525 - sparse_categorical_accuracy: 0.9800\n",
+      "5/5 [==============================] - 0s 14ms/step - loss: 0.3333 - sparse_categorical_accuracy: 0.8400\n",
       "Epoch 10/50\n",
-      "150/150 [==============================] - 0s 357us/sample - loss: 0.3181 - sparse_categorical_accuracy: 0.9800\n",
+      "5/5 [==============================] - 0s 11ms/step - loss: 0.3010 - sparse_categorical_accuracy: 0.9333\n",
       "Epoch 11/50\n",
-      "150/150 [==============================] - 0s 708us/sample - loss: 0.2909 - sparse_categorical_accuracy: 0.9667\n",
+      "5/5 [==============================] - 0s 10ms/step - loss: 0.2670 - sparse_categorical_accuracy: 0.9600\n",
       "Epoch 12/50\n",
-      "150/150 [==============================] - 0s 475us/sample - loss: 0.2638 - sparse_categorical_accuracy: 0.9733\n",
+      "5/5 [==============================] - 0s 13ms/step - loss: 0.2505 - sparse_categorical_accuracy: 0.9467\n",
       "Epoch 13/50\n",
-      "150/150 [==============================] - 0s 435us/sample - loss: 0.2396 - sparse_categorical_accuracy: 0.9800\n",
+      "5/5 [==============================] - 0s 16ms/step - loss: 0.2401 - sparse_categorical_accuracy: 0.9533\n",
       "Epoch 14/50\n",
-      "150/150 [==============================] - 0s 400us/sample - loss: 0.2150 - sparse_categorical_accuracy: 0.9800\n",
+      "5/5 [==============================] - 0s 13ms/step - loss: 0.2233 - sparse_categorical_accuracy: 0.9400\n",
       "Epoch 15/50\n",
-      "150/150 [==============================] - 0s 474us/sample - loss: 0.1990 - sparse_categorical_accuracy: 0.9467\n",
+      "5/5 [==============================] - 0s 15ms/step - loss: 0.2187 - sparse_categorical_accuracy: 0.9533\n",
       "Epoch 16/50\n",
-      "150/150 [==============================] - 0s 599us/sample - loss: 0.1847 - sparse_categorical_accuracy: 0.9667\n",
+      "5/5 [==============================] - 0s 13ms/step - loss: 0.1846 - sparse_categorical_accuracy: 0.9467\n",
       "Epoch 17/50\n",
-      "150/150 [==============================] - 0s 644us/sample - loss: 0.1661 - sparse_categorical_accuracy: 0.9533\n",
+      "5/5 [==============================] - 0s 12ms/step - loss: 0.1756 - sparse_categorical_accuracy: 0.9533\n",
       "Epoch 18/50\n",
-      "150/150 [==============================] - 0s 567us/sample - loss: 0.1442 - sparse_categorical_accuracy: 0.9800\n",
+      "5/5 [==============================] - 0s 12ms/step - loss: 0.1631 - sparse_categorical_accuracy: 0.9533\n",
       "Epoch 19/50\n",
-      "150/150 [==============================] - 0s 503us/sample - loss: 0.1469 - sparse_categorical_accuracy: 0.9467\n",
+      "5/5 [==============================] - 0s 13ms/step - loss: 0.1504 - sparse_categorical_accuracy: 0.9600\n",
       "Epoch 20/50\n",
-      "150/150 [==============================] - 0s 496us/sample - loss: 0.1534 - sparse_categorical_accuracy: 0.9533\n",
+      "5/5 [==============================] - 0s 13ms/step - loss: 0.1417 - sparse_categorical_accuracy: 0.9600\n",
       "Epoch 21/50\n",
-      "150/150 [==============================] - 0s 448us/sample - loss: 0.1266 - sparse_categorical_accuracy: 0.9600\n",
+      "5/5 [==============================] - 0s 12ms/step - loss: 0.1380 - sparse_categorical_accuracy: 0.9533\n",
       "Epoch 22/50\n",
-      "150/150 [==============================] - 0s 638us/sample - loss: 0.1112 - sparse_categorical_accuracy: 0.9800\n",
+      "5/5 [==============================] - 0s 15ms/step - loss: 0.1312 - sparse_categorical_accuracy: 0.9467\n",
       "Epoch 23/50\n",
-      "150/150 [==============================] - 0s 556us/sample - loss: 0.1066 - sparse_categorical_accuracy: 0.9800\n",
+      "5/5 [==============================] - 0s 31ms/step - loss: 0.1223 - sparse_categorical_accuracy: 0.9600\n",
       "Epoch 24/50\n",
-      "150/150 [==============================] - 0s 555us/sample - loss: 0.1033 - sparse_categorical_accuracy: 0.9800\n",
+      "5/5 [==============================] - 0s 14ms/step - loss: 0.1168 - sparse_categorical_accuracy: 0.9533\n",
       "Epoch 25/50\n",
-      "150/150 [==============================] - 0s 472us/sample - loss: 0.1076 - sparse_categorical_accuracy: 0.9533\n",
+      "5/5 [==============================] - 0s 15ms/step - loss: 0.1081 - sparse_categorical_accuracy: 0.9600\n",
       "Epoch 26/50\n",
-      "150/150 [==============================] - 0s 398us/sample - loss: 0.1033 - sparse_categorical_accuracy: 0.9800\n",
+      "5/5 [==============================] - 0s 12ms/step - loss: 0.1078 - sparse_categorical_accuracy: 0.9533\n",
       "Epoch 27/50\n",
-      "150/150 [==============================] - 0s 455us/sample - loss: 0.0907 - sparse_categorical_accuracy: 0.9800\n",
+      "5/5 [==============================] - 0s 12ms/step - loss: 0.1000 - sparse_categorical_accuracy: 0.9667\n",
       "Epoch 28/50\n",
-      "150/150 [==============================] - 0s 518us/sample - loss: 0.0887 - sparse_categorical_accuracy: 0.9733\n",
+      "5/5 [==============================] - 0s 10ms/step - loss: 0.0985 - sparse_categorical_accuracy: 0.9600\n",
       "Epoch 29/50\n",
-      "150/150 [==============================] - 0s 559us/sample - loss: 0.0981 - sparse_categorical_accuracy: 0.9533\n",
+      "5/5 [==============================] - 0s 13ms/step - loss: 0.0953 - sparse_categorical_accuracy: 0.9600\n",
       "Epoch 30/50\n",
-      "150/150 [==============================] - 0s 497us/sample - loss: 0.0911 - sparse_categorical_accuracy: 0.9733\n",
+      "5/5 [==============================] - 0s 11ms/step - loss: 0.1080 - sparse_categorical_accuracy: 0.9667\n",
       "Epoch 31/50\n",
-      "150/150 [==============================] - 0s 392us/sample - loss: 0.0823 - sparse_categorical_accuracy: 0.9600\n",
+      "5/5 [==============================] - 0s 11ms/step - loss: 0.1610 - sparse_categorical_accuracy: 0.9533\n",
       "Epoch 32/50\n",
-      "150/150 [==============================] - 0s 497us/sample - loss: 0.0831 - sparse_categorical_accuracy: 0.9600\n",
+      "5/5 [==============================] - 0s 12ms/step - loss: 0.1172 - sparse_categorical_accuracy: 0.9467\n",
       "Epoch 33/50\n",
-      "150/150 [==============================] - 0s 445us/sample - loss: 0.0867 - sparse_categorical_accuracy: 0.9733\n",
+      "5/5 [==============================] - 0s 13ms/step - loss: 0.1218 - sparse_categorical_accuracy: 0.9600\n",
       "Epoch 34/50\n",
-      "150/150 [==============================] - 0s 450us/sample - loss: 0.1068 - sparse_categorical_accuracy: 0.9400\n",
+      "5/5 [==============================] - 0s 12ms/step - loss: 0.1243 - sparse_categorical_accuracy: 0.9600\n",
       "Epoch 35/50\n",
-      "150/150 [==============================] - 0s 420us/sample - loss: 0.0981 - sparse_categorical_accuracy: 0.9667\n",
+      "5/5 [==============================] - 0s 15ms/step - loss: 0.1148 - sparse_categorical_accuracy: 0.9600\n",
       "Epoch 36/50\n",
-      "150/150 [==============================] - 0s 449us/sample - loss: 0.0787 - sparse_categorical_accuracy: 0.9733\n",
+      "5/5 [==============================] - 0s 12ms/step - loss: 0.1009 - sparse_categorical_accuracy: 0.9533\n",
       "Epoch 37/50\n",
-      "150/150 [==============================] - 0s 540us/sample - loss: 0.0841 - sparse_categorical_accuracy: 0.9733\n",
+      "5/5 [==============================] - 0s 12ms/step - loss: 0.0770 - sparse_categorical_accuracy: 0.9600\n",
       "Epoch 38/50\n",
-      "150/150 [==============================] - 0s 423us/sample - loss: 0.0865 - sparse_categorical_accuracy: 0.9533\n",
+      "5/5 [==============================] - 0s 14ms/step - loss: 0.0773 - sparse_categorical_accuracy: 0.9733\n",
       "Epoch 39/50\n",
-      "150/150 [==============================] - 0s 333us/sample - loss: 0.0817 - sparse_categorical_accuracy: 0.9733\n",
+      "5/5 [==============================] - 0s 13ms/step - loss: 0.1029 - sparse_categorical_accuracy: 0.9600\n",
       "Epoch 40/50\n",
-      "150/150 [==============================] - 0s 375us/sample - loss: 0.0877 - sparse_categorical_accuracy: 0.9600\n",
+      "5/5 [==============================] - 0s 12ms/step - loss: 0.0772 - sparse_categorical_accuracy: 0.9800\n",
       "Epoch 41/50\n",
-      "150/150 [==============================] - 0s 442us/sample - loss: 0.1000 - sparse_categorical_accuracy: 0.9667\n",
+      "5/5 [==============================] - 0s 11ms/step - loss: 0.0744 - sparse_categorical_accuracy: 0.9533\n",
       "Epoch 42/50\n",
-      "150/150 [==============================] - 0s 451us/sample - loss: 0.1399 - sparse_categorical_accuracy: 0.9267\n",
+      "5/5 [==============================] - 0s 10ms/step - loss: 0.0827 - sparse_categorical_accuracy: 0.9667\n",
       "Epoch 43/50\n",
-      "150/150 [==============================] - 0s 471us/sample - loss: 0.0967 - sparse_categorical_accuracy: 0.9667\n",
+      "5/5 [==============================] - 0s 14ms/step - loss: 0.0817 - sparse_categorical_accuracy: 0.9733\n",
       "Epoch 44/50\n",
-      "150/150 [==============================] - 0s 415us/sample - loss: 0.0796 - sparse_categorical_accuracy: 0.9800\n",
+      "5/5 [==============================] - 0s 11ms/step - loss: 0.0761 - sparse_categorical_accuracy: 0.9600\n",
       "Epoch 45/50\n",
-      "150/150 [==============================] - 0s 477us/sample - loss: 0.0789 - sparse_categorical_accuracy: 0.9600\n",
+      "5/5 [==============================] - 0s 13ms/step - loss: 0.0793 - sparse_categorical_accuracy: 0.9667\n",
       "Epoch 46/50\n",
-      "150/150 [==============================] - 0s 473us/sample - loss: 0.0775 - sparse_categorical_accuracy: 0.9733\n",
+      "5/5 [==============================] - 0s 11ms/step - loss: 0.0791 - sparse_categorical_accuracy: 0.9533\n",
       "Epoch 47/50\n",
-      "150/150 [==============================] - 0s 475us/sample - loss: 0.0672 - sparse_categorical_accuracy: 0.9667\n",
+      "5/5 [==============================] - 0s 11ms/step - loss: 0.0721 - sparse_categorical_accuracy: 0.9600\n",
       "Epoch 48/50\n",
-      "150/150 [==============================] - 0s 399us/sample - loss: 0.0679 - sparse_categorical_accuracy: 0.9800\n",
+      "5/5 [==============================] - 0s 13ms/step - loss: 0.0752 - sparse_categorical_accuracy: 0.9600\n",
       "Epoch 49/50\n",
-      "150/150 [==============================] - 0s 400us/sample - loss: 0.0753 - sparse_categorical_accuracy: 0.9733\n",
+      "5/5 [==============================] - 0s 11ms/step - loss: 0.0723 - sparse_categorical_accuracy: 0.9600\n",
       "Epoch 50/50\n",
-      "150/150 [==============================] - 0s 283us/sample - loss: 0.0696 - sparse_categorical_accuracy: 0.9733\n"
+      "5/5 [==============================] - 0s 13ms/step - loss: 0.0754 - sparse_categorical_accuracy: 0.9733\n"
      ]
     }
    ],
@@ -267,27 +267,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "checkpoints:\n",
-      "model01.h5  model10.h5\tmodel19.h5  model28.h5\tmodel37.h5  model46.h5\n",
-      "model02.h5  model11.h5\tmodel20.h5  model29.h5\tmodel38.h5  model47.h5\n",
-      "model03.h5  model12.h5\tmodel21.h5  model30.h5\tmodel39.h5  model48.h5\n",
-      "model04.h5  model13.h5\tmodel22.h5  model31.h5\tmodel40.h5  model49.h5\n",
-      "model05.h5  model14.h5\tmodel23.h5  model32.h5\tmodel41.h5  model50.h5\n",
-      "model06.h5  model15.h5\tmodel24.h5  model33.h5\tmodel42.h5\n",
-      "model07.h5  model16.h5\tmodel25.h5  model34.h5\tmodel43.h5\n",
-      "model08.h5  model17.h5\tmodel26.h5  model35.h5\tmodel44.h5\n",
-      "model09.h5  model18.h5\tmodel27.h5  model36.h5\tmodel45.h5\n",
-      "\n",
-      "logs:\n",
-      "2020-05-06-08-06-36  2020-05-06-12-39-28  2020-05-06-12-51-23\n",
-      "2020-05-06-08-15-49  2020-05-06-12-50-02\n"
+      "checkpoints:\r\n",
+      "empty.txt   model09.h5\tmodel18.h5  model27.h5\tmodel36.h5  model45.h5\r\n",
+      "model01.h5  model10.h5\tmodel19.h5  model28.h5\tmodel37.h5  model46.h5\r\n",
+      "model02.h5  model11.h5\tmodel20.h5  model29.h5\tmodel38.h5  model47.h5\r\n",
+      "model03.h5  model12.h5\tmodel21.h5  model30.h5\tmodel39.h5  model48.h5\r\n",
+      "model04.h5  model13.h5\tmodel22.h5  model31.h5\tmodel40.h5  model49.h5\r\n",
+      "model05.h5  model14.h5\tmodel23.h5  model32.h5\tmodel41.h5  model50.h5\r\n",
+      "model06.h5  model15.h5\tmodel24.h5  model33.h5\tmodel42.h5\r\n",
+      "model07.h5  model16.h5\tmodel25.h5  model34.h5\tmodel43.h5\r\n",
+      "model08.h5  model17.h5\tmodel26.h5  model35.h5\tmodel44.h5\r\n",
+      "\r\n",
+      "logs:\r\n",
+      "2020-08-21-10-17-40  2020-08-21-10-18-58  2020-08-21-10-23-38  empty.txt\r\n"
      ]
     }
    ],
@@ -302,13 +301,13 @@
     "## Visualization with TensorBoard\n",
     "\n",
     "Before, during or after trainig we can then open TensorBoard. \n",
-    "From a commanline shell, we use ```tensorboard --log-dir logs``` where ```logs``` is the directory containing all the log-files we\n",
+    "From a commanline shell, we use ```tensorboard --logdir logs``` where ```logs``` is the directory containing all the log-files we\n",
     "have specified when setting up the TensorBoard callback.\n",
     "\n",
     "We can then open a webbrowser and point it to the location where TensorBoard runs, e.g. ``` http://localhost:6006/```\n",
     "\n",
     "An example is shown below:\n",
-    "![TensorBoard Example](TensorBoard_Example_Iris.png)"
+    "![TensorBoard Example](TensorBoard_Example_Iris_2.png)"
    ]
   },
   {
@@ -343,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
