add subtitle "common cold"

--- a/TimeSeriesLSTM_CommonCold.ipynb
+++ b/TimeSeriesLSTM_CommonCold.ipynb
@@ -7,7 +7,8 @@
     "id": "4buzqYUuSVSD"
    },
    "source": [
-    " # Timeseries Forecasting with LSTM\n",
+    " # Timeseries Forecasting with LSTM \n",
+    " ## Common Cold\n",
     "\n",
     " In this notebook we will use an LSTM based neural network model to forecast a time-series from a real-world dataset.\n",
     " As an example, we use the number of searches for the \"common cold\" until end of December 2019. We exclude any further data since the search for this term is heavily influenced by the global pandemic caused by SARS-Covid-19.\n",
