--- a/GanKeras_DCGAN_MNIST.ipynb
+++ b/GanKeras_DCGAN_MNIST.ipynb
@@ -9,17 +9,17 @@
    "source": [
     "# Generative Adversarial Networks (GAN)\n",
     "\n",
-    "Generative Adversarial Networks use two competing neural networks to create new output based on what it has learned from a training sample.\n",
+    "Generative Adversarial Networks use two competing neural networks to create new output based on what they have learned from a training sample.\n",
     "\n",
-    "In the simplest setting (shown here), we have two networks, a ''generator'' and a ''discriminitor''.  The generator starts from random noise and tries to construct a realistic output, in our case, an image. The discriminator acts as a kind of judge to determin whether the output of the generator is realistic in the sense that it cannot be distinguished from the dataset used for training.\n",
+    "In the simplest setting (shown here), we have two networks, a ''generator'' and a ''discriminator''.  The generator starts from random noise and tries to construct a realistic output, in our case, an image. The discriminator acts as a kind of judge to determin whether the output of the generator is realistic in the sense that it cannot be distinguished from the dataset used for training.\n",
     "\n",
-    "The modern approach of GANs was devloped by I. Goodfellow at al. in 2004 ([paper](https://arxiv.org/abs/1406.2661)), though it is argued that the underlying concepts have been developed by J. Schmidthuber starting in the early 1990s ([paper 1](https://arxiv.org/abs/1906.04493), [paper 2](http://people.idsia.ch/~juergen/FKI-126-90ocr.pdf), [paper 3](http://people.idsia.ch/~juergen/multipleways2009.pdf) and in particular [paper 4](https://ieeexplore.ieee.org/document/6795705)).\n",
+    "The modern approach of GANs was developed by I. Goodfellow et al. in 2004 ([paper](https://arxiv.org/abs/1406.2661)), though it is argued that the underlying concepts had been developed by J. Schmidthuber starting in the early 1990s ([paper 1](https://arxiv.org/abs/1906.04493), [paper 2](http://people.idsia.ch/~juergen/FKI-126-90ocr.pdf), [paper 3](http://people.idsia.ch/~juergen/multipleways2009.pdf) and in particular [paper 4](https://ieeexplore.ieee.org/document/6795705)).\n",
     "\n",
-    "Since its original inception, many varieties of GANs have been developed, we will use DCGAN (deep convolutional GAN) by Radford et al ([paper](https://arxiv.org/abs/1511.06434)) here, using the model implementation from the [TensorFlow example](https://www.tensorflow.org/tutorials/generative/dcgan) by Google.\n",
+    "Since its original inception, many varieties of GANs have been developed. We will use DCGAN (deep convolutional GAN) by Radford et al ([paper](https://arxiv.org/abs/1511.06434)) here, using the model implementation from the [TensorFlow example](https://www.tensorflow.org/tutorials/generative/dcgan) by Google.\n",
     "\n",
     "As the dataset, we will use the [MNIST](http://yann.lecun.com/exdb/mnist/) database by Y. LeCun which contains 60.000 images of hand-written digits.\n",
     "\n",
-    "In this setting, the output resembles such digits after about 50 training epochs. Trainining a single epoch even with this relatively simple setting can take up to some minutes depending on the underlying hardware.\n"
+    "In this setting, the output resembles such digits after about 50 training epochs. Training a single epoch even with this relatively simple setting can take up to some minutes depending on the underlying hardware.\n"
    ]
   },
   {
@@ -75,7 +75,7 @@
    "source": [
     "We now define some general settings.\n",
     " * The dataset contains 60.000 images, we will train the network using batches of 256 at a time\n",
-    " * The generator starts off from random noise. In our case, we take 100 numbers taken from a standard Normal distribution and generate an image from these."
+    " * The generator starts off from random noise. In our case, we take 100 numbers taken from a standard normal distribution and generate an image from these."
    ]
   },
   {
@@ -104,12 +104,12 @@
     "## Load and Prepare Data\n",
     "\n",
     "We now load the MNIST dataset. Since this is a very popular dataset, it is contained in many machine learning frameworks and can be accessed easily.\n",
-    "The dataset contains 60.000 images where each image is a gray scale image and has 28x28 pixels in x and y direction.\n",
-    "Each image is therefore characterized by the dimensions (28,28,1).\n",
+    "The dataset contains 60.000 images where each image is a gray scale image and has 28x28 pixels in the x and y direction.\n",
+    "Each image is therefore characterized by its dimensions (28,28,1).\n",
     "\n",
     "We first load the data and then show an example.\n",
     "\n",
-    "Once you have looked at this dataset, maybe try the [Fashion MNIST](https://github.com/zalandoresearch/fashion-mnist) dataset developed by Zalando. This is intended as a ''drop-in replacement'' of the MNIST dataset and has the same dimensions and number of images - but it shows the outline of clothes instead."
+    "Once you have looked at this dataset, maybe try the [Fashion MNIST](https://github.com/zalandoresearch/fashion-mnist) dataset developed by Zalando. This is intended as a ''drop-in replacement'' of the MNIST dataset and has the same dimensions and number of images, but it shows the outline of clothes instead."
    ]
   },
   {
@@ -185,7 +185,7 @@
     "\n",
     "First we reshape the arrays holding the image data, in particular, we add the number ``1`` indicating the number of color channels, in our case, one gray scale.\n",
     "\n",
-    "Since the gray scale values range from 0...255, we first normalize the range to lie in the interval [-1,1]. When we want to draw an image later we have to remember to undo this step."
+    "Since the gray scale values range from 0 - 255, we first normalize the range to lie in the interval [-1,1]. When we want to draw an image later, we have to remember to undo this step."
    ]
   },
   {
@@ -215,8 +215,8 @@
     "## Model definition\n",
     "\n",
     "We now define the two models we need:\n",
-    " * The generator takes random noise as input and creates a 28x28 pixel gray scale image from this. Hence our input shape we pass to the generator is (100,) and the output shape is (28,28,1). The generator uses [Conv2DTRanspose](https://www.tensorflow.org/api_docs/python/tf/keras/layers/Conv2DTranspose) layers that are the ''inverse'' of normal convolutional layers to create the image from the noise used as input.\n",
-    " * The discriminator judges whether the images created by the generator are realistic. Hence we feed an tensor of shape (28,28,1) as input and our output is a single number, indicating whether the image is realistic or not. Note that in this case the model uses convolutional layers with a stride of 2 instead of maxpooling."
+    " * The generator takes random noise as input and creates a 28x28 pixel gray scale image from this. Hence our input shape we pass to the generator is (100,) and the output shape is (28,28,1). The generator uses [Conv2DTranspose](https://www.tensorflow.org/api_docs/python/tf/keras/layers/Conv2DTranspose) layers that are the ''inverse'' of normal convolutional layers to create the image from the noise used as input.\n",
+    " * The discriminator judges whether the images created by the generator are realistic. Hence we feed a tensor of shape (28,28,1) as input and our output is a single number, indicating whether the image is realistic or not. Note that in this case the model uses convolutional layers with a stride of 2 instead of maxpooling."
    ]
   },
   {
@@ -324,7 +324,7 @@
     "id": "SOUeEYbQamQ0"
    },
    "source": [
-    "Now we create an instance of the discriminator model. Like the generator instance, this is already a fully working model - so we can feed it the above image and as expected, it is not deemed as a realistic image."
+    "Now we create an instance of the discriminator model. Like the generator instance, this is already a fully working model, so we can feed it the above image and as expected, it is not deemed as a realistic image."
    ]
   },
   {
@@ -407,13 +407,13 @@
     "```\n",
     "def train(dataset, epochs=50, rows=2, columns=2)\n",
     "```\n",
-    "This loop runs for the number of epochs we will specify (50 by default) and takes the training dataset as further input.\n",
-    "During training we will show a few examples arranged in rows and columns (2 as default) of what the generator can produce at this stage since each training epoch will take somewhere between a few seconds and some minutes. To make this easier to compare, we always start from the same noise, hence we generate this seed first. \n",
+    "This loop runs for the specified number of epochs (50 by default) and takes the training dataset as further input.\n",
+    "During training, we will show a few examples arranged in rows and columns (2 by default) of what the generator can produce at this stage, since each training epoch will take somewhere between a few seconds and a few minutes. To make this easier to compare, we always start from the same noise; hence we generate this seed first. \n",
     "\n",
-    "The actual training then happes in the function ```train_step```.\n",
-    "Note that we use there the decorator [```tf.function```](https://www.tensorflow.org/api_docs/python/tf/function) to improve the performance.\n",
-    "Inside each training step, we first generate the noise the generator starts from and then let the generator create some images according to the current batch size.\n",
-    "The discriminator then computes the output of the real images from the training dataset as well as the corresponding output from the faked images and we compute the values of the loss - functions. Note that we use [```GradientTape```](https://www.tensorflow.org/api_docs/python/tf/GradientTape) to define the training loop ourselves - refer to the corresponding example in our repository if you're not yet familiar with them.\n",
+    "The actual training then happens in the function ```train_step```.\n",
+    "Note that we use the decorator [```tf.function```](https://www.tensorflow.org/api_docs/python/tf/function) to improve the performance.\n",
+    "Inside each training step, we first generate the noise the generator starts from and then let the generator create a few images according to the current batch size.\n",
+    "The discriminator then computes the output of the real images from the training dataset as well as the corresponding output from the faked images, and we compute the values of the loss-functions. Note that we use [```GradientTape```](https://www.tensorflow.org/api_docs/python/tf/GradientTape) to define the training loop ourselves - refer to the corresponding example in our repository if you're not yet familiar with them.\n",
     "\n",
     "We also define a small helper function to plot an array of images."
    ]
@@ -510,7 +510,7 @@
     "\n",
     "We now train the network using the above functions and save the models afterwards.\n",
     "\n",
-    "50 epochs should be sufficient so that the output resembles hand-written digits. They won't be perfect but it's clear enough to see that it works"
+    "50 epochs should be sufficient so that the output resembles hand-written digits. They won't be perfect, but it's clear enough to see that it works"
    ]
   },
   {
