--- a/IrisKeras.ipynb
+++ b/IrisKeras.ipynb
@@ -19,7 +19,7 @@
     "Keras was originally developed by F. Chollet as an API specification for deep learning [Keras Project](https://keras.io/).\n",
     "With version 2.0 of TensorFlow, Keras became one of the official and supported interfaces and is now\n",
     "one of the main ways to use TensorFlow. Note that the \"TensorFlow Keras\" is maintained as ```tf.keras``` inside\n",
-    "TensorFlow which is different from the the \"Keras Keras\" from the Keras project. It is recommended to always\n",
+    "TensorFlow which is different from the \"Keras Keras\" from the Keras project. It is recommended to always\n",
     "use ```tf.keras``` when using TensorFlow.\n",
     "\n",
     "The [Estimator](https://www.tensorflow.org/guide/estimator) framework also provides a high level interface\n",
@@ -30,20 +30,20 @@
     "Note that a Keras model can be converted to estimators via ```tf.keras.estimator.model_to_estimator(keras_model=model)``` \n",
     "so we do not lose anything by focusing on Keras.\n",
     "\n",
-    "The Keras API allow to define, train and use a deep neural network with a compact syntax.\n",
+    "The Keras API allows us to define, train, and use a deep neural network with a compact syntax.\n",
     "The main steps are:\n",
     "\n",
     "\n",
-    "* Define the model\n",
-    "* Compile the model\n",
+    "* define the model\n",
+    "* compile the model\n",
     "* start the training with ```model.fit(...)```\n",
     "* get the predictions with ```model.predict(...)```\n",
     "\n",
     "\n",
-    "This example will use the popular \"iris\" dataset.\n",
+    "This example will use the popular \"Iris\" dataset.\n",
     "\n",
-    "The [Iris Dataset](http://scikit-learn.org/stable/auto_examples/datasets/plot_iris_dataset.html) was [originally introduced](http://en.wikipedia.org/wiki/Iris_flower_data_set) by Sir Robert Fisher in 1936 as an example for discriminant analysis.\n",
-    "The data focus on how to discriminate between three different types of the [iris flower](http://en.wikipedia.org/wiki/Iris_(plant) ):\n",
+    "The [Iris dataset](http://scikit-learn.org/stable/auto_examples/datasets/plot_iris_dataset.html) was [originally introduced](http://en.wikipedia.org/wiki/Iris_flower_data_set) by Sir Robert Fisher in 1936 as an example for discriminant analysis.\n",
+    "The data focus on how to discriminate between three different types of the [iris flower](http://en.wikipedia.org/wiki/Iris_(plant):\n",
     "\n",
     "* Setosa, \n",
     "* Versicolour and\n",
@@ -56,7 +56,7 @@
     "* Petal Length and \n",
     "* Petal Width.\n",
     "\n",
-    "The labels (true values) are mapped as integers in $[0,1,2]$ for the three differerent flower types.\n",
+    "The labels (true values) are mapped as integers in $[0,1,2]$ for the three different flower types.\n",
     "\n",
     "As this is a popular dataset, it is contained in various machine learning packages.\n",
     "Here we use the data from the [SciKit-Learn](https://scikit-learn.org/stable/) machine learning suite."
@@ -292,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use [Andews Curves](https://en.wikipedia.org/wiki/Andrews_plot) to investigate how the features can be used to \n",
+    "We can use [Andews curves](https://en.wikipedia.org/wiki/Andrews_plot) to investigate how the features can be used to \n",
     "discriminate between the labels."
    ]
   },
@@ -323,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Building a network in Keras\n",
+    "### Building a Network in Keras\n",
     "\n",
     "In this example we will use a very simple neural network.\n",
     "The input layer has 4 nodes, correspondingn to the 4 feature variables in each row of the dataset.\n",
@@ -415,7 +415,7 @@
     "\n",
     "We need to define the following things:\n",
     "* The loss function: This determines how the training process should evaluate whether the prediction made by the model is correct or not. As we have categorical data (three types of iris flowers) which we wish to classify, we use the [sparse categorical cross entropy](https://www.tensorflow.org/api_docs/python/tf/keras/losses/SparseCategoricalCrossentropy)\n",
-    "* The optimizer. Several choices exist, as a good practice, the Adam Optimizer (See the [paper](https://arxiv.org/abs/1412.6980)\n",
+    "* The optimizer. Several choices exist, as a good practice, the Adam Optimizer (see the [paper](https://arxiv.org/abs/1412.6980)\n",
     "and the [documentation](https://www.tensorflow.org/api_docs/python/tf/keras/optimizers/Adam) for more details) is a good starting point\n"
    ]
   },
@@ -602,10 +602,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, the network does not improve much beyond training epoch 15 or so and reaches a plateau of approx.98% accuracy.\n",
+    "As we can see, the network does not improve much beyond training epoch 15 or so and reaches a plateau of approximately 98% accuracy.\n",
     "We can then use the ```predict()``` method to feed data to the trained model and obtain predictions for future or unknown data.\n",
     "\n",
-    "(As this is small dataset, we have not split between training and test data and also use the training data for \n",
+    "(As this is small dataset, we have not split between training and test data and, thus, also use the training data for \n",
     "evaluation. In a real project we would of course not do that...)"
    ]
   },
